<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/string_row_input_hit" />

    <EditText
        android:id="@+id/inputRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_col_input_hit" />

    <EditText
        android:id="@+id/inputCol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/string_switch_input_hit"
        android:textOff="@string/string_switch_text_on_launch_time"
        android:textOn="@string/string_switch_text_off_used_time" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>